tests/compile_fail/include_zero.rs
use include_cstr::include_cstr;

fn main() {
    let _ = include_cstr!("content_with_zero.bin");
}
